--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/animate.css@latest/animate.min.css"
-    />
+    <link rel="icon" type="portfolio" href="henintsoa" />
+    <link rel="stylesheet" href="" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Henintsoa-portfolio</title>
   </head>
   <body>
     <div id="app"></div>
